--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="orange_warning">#FF9800</color>
     <color name="red_error">#F44336</color>
     <color name="gray_default">#9E9E9E</color>
-
+    <color name="dark_grey">#FF757575</color>
 
 <color name="colorPrimary">#FF6B6B</color>  <!-- Coral red -->
 <color name="colorPrimaryDark">#EE5B5B</color>  <!-- Darker coral -->
